--- a/.env
+++ b/.env
@@ -15,14 +15,14 @@ PUBLIC_URL=http://localhost:3000
 # (`/api/editing/render` by default), a secret token is used. This (client-side)
 # value must match your server-side value (see \sitecore\config\jss-sandbox.config).
 # We recommend an alphanumeric value of at least 16 characters.
-JSS_EDITING_SECRET=ao8x3ycr0p77e3a4bwsvz65c0iqrujjqxir1gubatav
+JSS_EDITING_SECRET=
 
 # Your Sitecore API key is needed to build the app. Typically, the API key is
 # defined in `scjssconfig.json` (as `sitecore.apiKey`). This file may not exist
 # when building locally (if you've never run `jss setup`), or when building in a
 # higher environment (since `scjssconfig.json` is ignored from source control).
 # In this case, use this environment variable to provide the value at build time.
-SITECORE_API_KEY=73289B96-6B4C-45A8-986A-4418B81BF4D7
+SITECORE_API_KEY=
 
 # Your Sitecore API hostname is needed to build the app. Typically, the API host is
 # defined in `scjssconfig.json` (as `sitecore.layoutServiceHost`). This file may
